# sogang_DIP

./: README
DIP_HW01/: CMakeLists.txt  CMakeSettings.json  DIP_HW01.cpp  DIP_HW01.h  HW01.cpp  utils.h
DIP_HW2/: CMakeLists.txt  DIP_HW02.cpp  HW02.cpp  README  ext_funcs.cpp  filt_funcs.cpp  utils.h
DIP_HW3/: CMakeLists.txt  HW03.cpp  HW03.h  README  dft.cpp  utils.cpp  utils.h
DIP_HW3/images/: Rectangle.tif
DIP_HW4/: CMakeLists.txt  CMakeSettings.json  HW04.cpp  README  pGNUPlot.cpp  utils.cpp  utils.h
DIP_HW5/: HW05.cpp  HW05.h  README  utils.cpp  utils.h
